Ajout interface mot de passe oublié

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -8,3 +8,16 @@
 /contact.class
 /propos.class
 /weld9.class
+/LoginEtudient$1.class
+/LoginEtudient$2.class
+/LoginEtudient$3.class
+/motDePasseOublier.class
+/motDePasseOublier$1.class
+/motDePasseOublier$2.class
+/motDePasseOublier$3.class
+/motDePasseOublier$4.class
+/motDePasseOublier$5.class
+/motDePasseOublier$6.class
+/LoginEtudient$4.class
+/LoginEtudient$5.class
+/motDePasseOublier$7.class
